<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:orderInCategory="2"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:orderInCategory="1"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/One"
        android:title="@string/One"
        android:orderInCategory="3"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/Two"
        android:title="@string/Two"
        android:orderInCategory="4"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/Delete"
        android:title="@string/Delete"
        android:icon="@drawable/ic_discard"
        app:showAsAction="always"
        >
    </item>

    <item
        android:id="@+id/Search"
        android:title="@string/Search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/ActivityOne"
        android:title="@string/ActivityOne"
        app:showAsAction="always">
    </item>

</menu>